[package]
name = "geometric_client"
version = "0.1.0"
edition = "2021"

[dependencies]
geometric_server = { path = "../geometric-server" }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "rt", "macros"] }
notify = "8.0.0"
file_monitor = { path = "../arithmetic-workspace/client_libraries/file_monitor" }
