[package]
name = "geometric_client"
version = "0.1.0"
edition = "2021"

[dependencies]
geometric_server = { git = "https://github.com/NullNet-ai/geometric-server", branch = "main" }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "rt", "macros"] }
file_monitor = { git = "https://github.com/NullNet-ai/arithmetic-workspace", branch = "main" }
